// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package org.wfa.measurement.config;

option java_package = "org.wfanet.measurement.config";
option java_multiple_files = true;

// Duchy public key configuration.
message DuchyPublicKeyConfig {
  message Entry {
    // Strictly increasing version number, such that a newer entry will always
    // have a higher version than an older entry.
    int64 combined_public_key_version = 1;

    // ID of the OpenSSL built-in elliptic curve. For example, 415 for the
    // prime256v1 curve.
    int32 elliptic_curve_id = 2;

    // ElGamal public key generator `g`.
    bytes el_gamal_generator = 3;

    // Map of Duchy name to ElGamal public key element `y = g^x`, where `g` is
    // the generator and `x` is the secret key.
    map<string, bytes> el_gamal_elements = 4;

    // The element of a combined ElGamal public key.
    //
    // TODO(wangyaopw): Remove this field once it's computed programmatically.
    bytes combined_el_gamal_element = 5;
  }

  // Map of CombinedPublicKey resource ID to config entry.
  map<string, Entry> entries = 1;
}
